--- a/App/templates/App/resultp.html
+++ b/App/templates/App/resultp.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+{% load static %}
 <html>
     <head>
         <title>Results</title>
+        <link rel="stylesheet" href="{% static 'style.css' %}">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -17,15 +19,22 @@
             </h3>
             <div class="container-fluid" style="margin: 50px;">
 
-                <form action="" method="GET">
-                    <div class="form-group">
-                        <input type="text" name="q" placeholder="Faites votre recherche" class="form-control">
-                    </div>
+                <form action="" method="GET" autocomplete="off">
+                    {% if q|length > 0 %}
+                        <div class="form-group autocomplete" style="width: 700px;">
+                            <input id="myInput" value="{{ q }}" type="text" name="q" placeholder="Faites votre recherche" class="form-control">
+                        </div>
+                    {% else %}
+                        <div class="form-group autocomplete" style="width: 700px;">
+                            <input id="myInput" type="text" name="q" placeholder="Faites votre recherche" class="form-control">
+                        </div>
+                    {% endif %}
+                    
                     <div class="form-group" style="float: right;">
                         <input type="submit" class="btn btn-success" name="" id="" value="Rechercher">
                     </div>
                 </form>
-
+                
             </div>
             <h5>Le nombre de resultat : {{ nombre }}</h5>
             <h5>Le temps de recherche : {{ time }}</h5>
@@ -35,7 +44,7 @@
                 <div class="col-sm-4" style="margin: 20px;">
                     <div class="card card text-white bg-success">
                         <div class="card-body">
-                            <h5 class="card-title"><strong><u>Titre</u></strong>: {{ publi.title }}</h5>
+                            <h5 class="card-title"><strong><u>Titre</u></strong>: <span class="titre">{{ publi.title }}</span></h5>
                             <p class="card-text"><strong><u>BookTitle</u></strong>: {{ publi.booktitle }}</p>
                             <footer>
                                 <cite>
@@ -46,8 +55,30 @@
                     </div>
                 </div>
                 {% endfor %}
-
             </div>
         </div>
+        <script>
+            var spans = document.querySelectorAll('.titre'); //To get all the titles
+            var q = "{{ q }}"; //The search query
+            var style = "<span style='font-weight: bold;color:cyan;'>"+ q +"</span>";
+            spans.forEach(element => { //take the titles one by one
+            //We are sure that the title contains the word
+            if (element.innerHTML.includes(q)){
+                element.innerHTML = element.innerHTML.replace(q, style); //Replace the string ali with the span and the style
+            }
+            else{
+                var q2 = q.charAt(0).toUpperCase() + q.slice(1); //Redefine a new var that contains the qery
+                var style2 = "<span style='font-weight: bold;color:cyan;'>"+ q2 +"</span>";
+                element.innerHTML = element.innerHTML.replace(q2, style); //Replace the string ali with the span and the style
+            }
+            });
+            function getPublications(input){
+                
+            }
+        </script>
+        <script src="{% static 'autocompletion.js' %}"></script>
+        <script>
+            autocomplete(document.getElementById("myInput"), countries);
+        </script>
     </body>
 </html>
